# Tally

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_SPEC.md  README.md  pyproject.toml
config/: backtest.yaml  pool.yaml  portfolio.yaml  strategies.yaml  system.yaml  watchlist.yaml
docs/: DEVELOPMENT_PROCESS.md  PROJECT_STATUS.md
docs/archive/: PRD_draft.md  strategy_digest.md
docs/changelog/: 2026-07-09-m0.5-scaffold.md  2026-07-09-m1-t1.1-repository.md  2026-07-09-m1-t1.2-tushare-source.md  2026-07-09-m1-t1.3-sync.md  TEMPLATE.md
docs/design/: 技术选型评审-2026-07-08.md  智能选股分析系统方案.html  量化策略共识方案.html
prototype/stock_advisor/: README.md  config.py  data_sources.py  demo_data.py  main.py  report.py  requirements.txt  screener.py  signals.py
prototype/stock_advisor/data/: pool.json
prototype/stock_advisor/reports/: report_2026-07-08.md
src/tally/: __init__.py  cli.py
src/tally/backtest/: __init__.py
src/tally/common/: __init__.py  calendar.py  market_profile.py
src/tally/common/config/: __init__.py  backtest.py  base.py  merge.py  pool.py  portfolio.py  strategies.py  system.py  watchlist.py
src/tally/data/: __init__.py  _rows.py  _writer.py  rate_limit.py  repository.py  schema.sql  sync.py
src/tally/data/sources/: __init__.py  tushare_source.py
src/tally/pool/: __init__.py
src/tally/portfolio/: __init__.py
src/tally/strategy/: __init__.py
src/tally/tracking/: __init__.py
tests/: test_no_market_literal_in_strategy.py  test_smoke.py
tests/common/: test_base.py  test_calendar.py  test_config.py  test_market_profile.py  test_watchlist.py
tests/data/: test_rate_limit.py  test_repository.py  test_repository_concurrency.py  test_rows.py  test_sync.py  test_tushare_source.py  test_writer.py  tushare_fixtures.py
tests/fixtures/tushare/: README.md  adj_factor.json  daily.json  daily_basic.json
tests/synth/: generators.py  test_generators.py
